# draw_pixels_from_scratch

./: CMakeLists.txt  README.md  raycaster.txt
include/: draw_pixel.h  helper.h
src/: 2d_thinking_exercises.c  draw_pixel.c  main.c  raster_graphics_mini_excercises.c
